# MSCG-release

./: Install  LAMMPS_MSCG_Manual.txt  MSCGFM 1.5 Manual.txt  MSCGFM 1.6 Manual.txt  MSCGFM 1.7 Manual.txt  Manual-density_supplement.txt  PrivateFeatures.txt  README.md  README_lammps.txt  README_library.txt  ReleaseNotes.txt  Zack-paper-outline.txt  wish_list.txt
examples/MSCG_library_example/: README_library_example.txt  control.in  mscg_driver.cpp  rangefinder_driver.cpp  read_lammps.cpp  read_lammps.h
examples/batch_fm/: README_batch_fm.txt  control.in  res_av.in  result1.out  result10.out  result2.out  result3.out  result4.out  result5.out  result6.out  result7.out  result8.out  result9.out  rmin.in  top.in
examples/bayesian_fm/: README_bayesian_fm.txt  README_table_fm.txt  control_base.in  control_bayesian.in  rmin.in  rmin_b.in  top.in
examples/density_fm/: control.in  rmin.in  rmin_b.in  table.in  top.in
examples/fix_lammps_fm/: 1_1.table  README_lammps_fm.txt  control.in  data.MeOH_CG  in.rerun  in.rerun_fm  in.rerun_range  in.rerun_re  top.in
fix_mscg/: fix_mscg.cpp  fix_mscg.h
newfm-legacy/: Makefile  avfm.c  avfm.h  cg_gro.c  cg_gro.h  common.h  compute.h  control.h  disdis.c  disdis.h  matrix.h  newfm.c  output.h  pda_lsqr.f  range.c  range.h  top.h  trj.h  types.h
src/: batch_fm_combination.cpp  batch_fm_combination.h  combinefm.cpp  control_input.cpp  control_input.h  external_matrix_routines.h  fm_output.cpp  fm_output.h  force_computation.cpp  force_computation.h  geometry.cpp  geometry.h  interaction_hashing.cpp  interaction_hashing.h  interaction_model.cpp  interaction_model.h  iterate.sh  matrix.cpp  matrix.h  misc.cpp  misc.h  mscg.cpp  mscg.h  newfm.cpp  newibi.cpp  newobs.cpp  newrecode.cpp  newrem.cpp  range_finding.cpp  range_finding.h  rangefinder.cpp  recode.cpp  splines.cpp  splines.h  topology.cpp  topology.h  trajectory_input.cpp  trajectory_input.h
src/CMake/: CMakeLists.txt  README.md
(+492 files in other folders)
